quic/s2n-quic-core/src/transport/parameters/snapshots/s2n_quic_core__transport__parameters__tests__load_server_limits.snap
---
source: quic/s2n-quic-core/src/transport/parameters/tests.rs
expression: params
---
TransportParameters {
    max_idle_timeout: MaxIdleTimeout(
        VarInt(
            30000,
        ),
    ),
    max_udp_payload_size: MaxUdpPayloadSize(
        VarInt(
            65527,
        ),
    ),
    initial_max_data: InitialMaxData(
        VarInt(
            3750000,
        ),
    ),
    initial_max_stream_data_bidi_local: InitialMaxStreamDataBidiLocal(
        VarInt(
            3750000,
        ),
    ),
    initial_max_stream_data_bidi_remote: InitialMaxStreamDataBidiRemote(
        VarInt(
            3750000,
        ),
    ),
    initial_max_stream_data_uni: InitialMaxStreamDataUni(
        VarInt(
            3750000,
        ),
    ),
    initial_max_streams_bidi: InitialMaxStreamsBidi(
        VarInt(
            100,
        ),
    ),
    initial_max_streams_uni: InitialMaxStreamsUni(
        VarInt(
            100,
        ),
    ),
    max_datagram_frame_size: MaxDatagramFrameSize(
        VarInt(
            0,
        ),
    ),
    ack_delay_exponent: AckDelayExponent(
        3,
    ),
    max_ack_delay: MaxAckDelay(
        VarInt(
            25,
        ),
    ),
    migration_support: Enabled,
    active_connection_id_limit: ActiveConnectionIdLimit(
        VarInt(
            2,
        ),
    ),
    original_destination_connection_id: None,
    stateless_reset_token: None,
    preferred_address: None,
    initial_source_connection_id: None,
    retry_source_connection_id: None,
    dc_supported_versions: DcSupportedVersions {
        len: 0,
        versions: [
            0,
            0,
            0,
            0,
        ],
    },
    dc_peer_info: DcPeerInfo {
        data: b"",
    },
    mtu_probing_complete_support: Disabled,
}
