quic/s2n-quic-core/src/transport/parameters/snapshots/s2n_quic_core__transport__parameters__tests__server_snapshot_test.snap
---
source: quic/s2n-quic-core/src/transport/parameters/tests.rs
expression: encoded_output
---
[
    1,
    1,
    42,
    3,
    2,
    69,
    220,
    4,
    1,
    42,
    5,
    1,
    42,
    6,
    1,
    42,
    7,
    1,
    42,
    8,
    1,
    42,
    9,
    1,
    42,
    10,
    1,
    2,
    11,
    1,
    42,
    12,
    0,
    14,
    1,
    42,
    0,
    8,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    2,
    16,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    13,
    45,
    127,
    0,
    0,
    1,
    5,
    57,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    4,
    4,
    5,
    6,
    7,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    15,
    4,
    1,
    2,
    3,
    4,
    16,
    4,
    1,
    2,
    3,
    4,
    128,
    220,
    0,
    0,
    1,
    3,
    128,
    220,
    0,
    3,
    16,
    115,
    101,
    114,
    118,
    101,
    114,
    45,
    112,
    101,
    101,
    114,
    45,
    105,
    110,
    102,
    111,
    128,
    220,
    0,
    2,
    0,
]
